trunk/lib/libvsi/chn_vsi.output
Terminals unused in grammar

   FILENAME
   LETTER


State 34 conflicts: 6 shift/reduce


Grammar

    0 $accept: start $end

    1 start: nl item_list end_file
    2      | COMMENT nl item_list end_file
    3      | item_list end_file
    4      | COMMENT nl fatal_error nl
    5      | nl fatal_error nl
    6      | fatal_error nl
    7      | error nl end_file

    8 fatal_error: item_list junk
    9            | junk

   10 item_list: item_list item nl
   11          | item_list item ','
   12          | item_list item COMMENT nl
   13          | pdbfile nl
   14          | pdbfile nl item nl
   15          | pdbfile nl item ','
   16          | pdbfile nl item COMMENT nl

   17 item: residue
   18     | residue INTEGER
   19     | molecule
   20     | molecule INTEGER
   21     | cmd
   22     | trace
   23     | trace INTEGER
   24     | view

   25 cmd: CLEAR
   26    | echo

   27 echo: ECHO_CMD

   28 end_file: END_OF_FILE

   29 view: VIEW

   30 trace: INTEGER '-' INTEGER backbone COLOR
   31      | INTEGER '-' INTEGER CHAIN backbone COLOR

   32 backbone: '^'
   33         | '.'
   34         | '+'
   35         | '~'
   36         | ':'
   37         | '@'

   38 residue: RESIDUE INTEGER '.' color
   39        | RESIDUE INTEGER CHAIN '.' color
   40        | RESIDUE INTEGER '_' atom '.' color
   41        | RESIDUE INTEGER CHAIN '_' atom '.' color
   42        | RESIDUE INTEGER '_' CARBONYL '.' color
   43        | RESIDUE INTEGER CHAIN '_' CARBONYL '.' color
   44        | RESIDUE INTEGER '_' atom '-' hydrogen '.' color
   45        | RESIDUE INTEGER CHAIN '_' atom '-' hydrogen '.' color

   46 molecule: MOLECULE INTEGER '.' color
   47         | MOLECULE INTEGER CHAIN '.' color
   48         | MOLECULE INTEGER '_' atom '.' color
   49         | MOLECULE INTEGER CHAIN '_' atom '.' color
   50         | MOLECULE INTEGER '_' atom '-' hydrogen '.' color
   51         | MOLECULE INTEGER CHAIN '_' atom '-' hydrogen '.' color

   52 atom: AN_ATOM

   53 hydrogen: HYDROGEN

   54 color: '{' COLOR '}'
   55      | '(' COLOR ')'
   56      | COLOR

   57 junk: junk JUNK
   58     | JUNK

   59 pdbfile: PDBFILE
   60        | PDBFILE COMMENT

   61 nl: nl COMMENT NEWLINE
   62   | nl NEWLINE
   63   | NEWLINE


Terminals, with rules where they appear

$end (0) 0
'(' (40) 55
')' (41) 55
'+' (43) 34
',' (44) 11 15
'-' (45) 30 31 44 45 50 51
'.' (46) 33 38 39 40 41 42 43 44 45 46 47 48 49 50 51
':' (58) 36
'@' (64) 37
'^' (94) 32
'_' (95) 40 41 42 43 44 45 48 49 50 51
'{' (123) 54
'}' (125) 54
'~' (126) 35
error (256) 7
RESIDUE (258) 38 39 40 41 42 43 44 45
MOLECULE (259) 46 47 48 49 50 51
FILENAME (260)
PDBFILE (261) 59 60
LETTER (262)
COLOR (263) 30 31 54 55 56
CHAIN (264) 31 39 41 43 45 47 49 51
ECHO_CMD (265) 27
COMMENT (266) 2 4 12 16 60 61
AN_ATOM (267) 52
HYDROGEN (268) 53
INTEGER (269) 18 20 23 30 31 38 39 40 41 42 43 44 45 46 47 48 49 50
    51
VIEW (270) 29
CARBONYL (271) 42 43
JUNK (272) 57 58
NEWLINE (273) 61 62 63
END_OF_FILE (274) 28
CLEAR (275) 25


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
start (35)
    on left: 1 2 3 4 5 6 7, on right: 0
fatal_error (36)
    on left: 8 9, on right: 4 5 6
item_list (37)
    on left: 10 11 12 13 14 15 16, on right: 1 2 3 8 10 11 12
item (38)
    on left: 17 18 19 20 21 22 23 24, on right: 10 11 12 14 15 16
cmd (39)
    on left: 25 26, on right: 21
echo (40)
    on left: 27, on right: 26
end_file (41)
    on left: 28, on right: 1 2 3 7
view (42)
    on left: 29, on right: 24
trace (43)
    on left: 30 31, on right: 22 23
backbone (44)
    on left: 32 33 34 35 36 37, on right: 30 31
residue (45)
    on left: 38 39 40 41 42 43 44 45, on right: 17 18
molecule (46)
    on left: 46 47 48 49 50 51, on right: 19 20
atom (47)
    on left: 52, on right: 40 41 44 45 48 49 50 51
hydrogen (48)
    on left: 53, on right: 44 45 50 51
color (49)
    on left: 54 55 56, on right: 38 39 40 41 42 43 44 45 46 47 48 49
    50 51
junk (50)
    on left: 57 58, on right: 8 9 57
pdbfile (51)
    on left: 59 60, on right: 13 14 15 16
nl (52)
    on left: 61 62 63, on right: 1 2 4 5 6 7 10 12 13 14 15 16 61 62


State 0

    0 $accept: . start $end

    error    shift, and go to state 1
    PDBFILE  shift, and go to state 2
    COMMENT  shift, and go to state 3
    JUNK     shift, and go to state 4
    NEWLINE  shift, and go to state 5

    start        go to state 6
    fatal_error  go to state 7
    item_list    go to state 8
    junk         go to state 9
    pdbfile      go to state 10
    nl           go to state 11


State 1

    7 start: error . nl end_file

    NEWLINE  shift, and go to state 5

    nl  go to state 12


State 2

   59 pdbfile: PDBFILE .
   60        | PDBFILE . COMMENT

    COMMENT  shift, and go to state 13

    $default  reduce using rule 59 (pdbfile)


State 3

    2 start: COMMENT . nl item_list end_file
    4      | COMMENT . nl fatal_error nl

    NEWLINE  shift, and go to state 5

    nl  go to state 14


State 4

   58 junk: JUNK .

    $default  reduce using rule 58 (junk)


State 5

   63 nl: NEWLINE .

    $default  reduce using rule 63 (nl)


State 6

    0 $accept: start . $end

    $end  shift, and go to state 15


State 7

    6 start: fatal_error . nl

    NEWLINE  shift, and go to state 5

    nl  go to state 16


State 8

    3 start: item_list . end_file
    8 fatal_error: item_list . junk
   10 item_list: item_list . item nl
   11          | item_list . item ','
   12          | item_list . item COMMENT nl

    RESIDUE      shift, and go to state 17
    MOLECULE     shift, and go to state 18
    ECHO_CMD     shift, and go to state 19
    INTEGER      shift, and go to state 20
    VIEW         shift, and go to state 21
    JUNK         shift, and go to state 4
    END_OF_FILE  shift, and go to state 22
    CLEAR        shift, and go to state 23

    item      go to state 24
    cmd       go to state 25
    echo      go to state 26
    end_file  go to state 27
    view      go to state 28
    trace     go to state 29
    residue   go to state 30
    molecule  go to state 31
    junk      go to state 32


State 9

    9 fatal_error: junk .
   57 junk: junk . JUNK

    JUNK  shift, and go to state 33

    $default  reduce using rule 9 (fatal_error)


State 10

   13 item_list: pdbfile . nl
   14          | pdbfile . nl item nl
   15          | pdbfile . nl item ','
   16          | pdbfile . nl item COMMENT nl

    NEWLINE  shift, and go to state 5

    nl  go to state 34


State 11

    1 start: nl . item_list end_file
    5      | nl . fatal_error nl
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    PDBFILE  shift, and go to state 2
    COMMENT  shift, and go to state 35
    JUNK     shift, and go to state 4
    NEWLINE  shift, and go to state 36

    fatal_error  go to state 37
    item_list    go to state 38
    junk         go to state 9
    pdbfile      go to state 10


State 12

    7 start: error nl . end_file
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    COMMENT      shift, and go to state 35
    NEWLINE      shift, and go to state 36
    END_OF_FILE  shift, and go to state 22

    end_file  go to state 39


State 13

   60 pdbfile: PDBFILE COMMENT .

    $default  reduce using rule 60 (pdbfile)


State 14

    2 start: COMMENT nl . item_list end_file
    4      | COMMENT nl . fatal_error nl
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    PDBFILE  shift, and go to state 2
    COMMENT  shift, and go to state 35
    JUNK     shift, and go to state 4
    NEWLINE  shift, and go to state 36

    fatal_error  go to state 40
    item_list    go to state 41
    junk         go to state 9
    pdbfile      go to state 10


State 15

    0 $accept: start $end .

    $default  accept


State 16

    6 start: fatal_error nl .
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    COMMENT  shift, and go to state 35
    NEWLINE  shift, and go to state 36

    $default  reduce using rule 6 (start)


State 17

   38 residue: RESIDUE . INTEGER '.' color
   39        | RESIDUE . INTEGER CHAIN '.' color
   40        | RESIDUE . INTEGER '_' atom '.' color
   41        | RESIDUE . INTEGER CHAIN '_' atom '.' color
   42        | RESIDUE . INTEGER '_' CARBONYL '.' color
   43        | RESIDUE . INTEGER CHAIN '_' CARBONYL '.' color
   44        | RESIDUE . INTEGER '_' atom '-' hydrogen '.' color
   45        | RESIDUE . INTEGER CHAIN '_' atom '-' hydrogen '.' color

    INTEGER  shift, and go to state 42


State 18

   46 molecule: MOLECULE . INTEGER '.' color
   47         | MOLECULE . INTEGER CHAIN '.' color
   48         | MOLECULE . INTEGER '_' atom '.' color
   49         | MOLECULE . INTEGER CHAIN '_' atom '.' color
   50         | MOLECULE . INTEGER '_' atom '-' hydrogen '.' color
   51         | MOLECULE . INTEGER CHAIN '_' atom '-' hydrogen '.' color

    INTEGER  shift, and go to state 43


State 19

   27 echo: ECHO_CMD .

    $default  reduce using rule 27 (echo)


State 20

   30 trace: INTEGER . '-' INTEGER backbone COLOR
   31      | INTEGER . '-' INTEGER CHAIN backbone COLOR

    '-'  shift, and go to state 44


State 21

   29 view: VIEW .

    $default  reduce using rule 29 (view)


State 22

   28 end_file: END_OF_FILE .

    $default  reduce using rule 28 (end_file)


State 23

   25 cmd: CLEAR .

    $default  reduce using rule 25 (cmd)


State 24

   10 item_list: item_list item . nl
   11          | item_list item . ','
   12          | item_list item . COMMENT nl

    COMMENT  shift, and go to state 45
    NEWLINE  shift, and go to state 5
    ','      shift, and go to state 46

    nl  go to state 47


State 25

   21 item: cmd .

    $default  reduce using rule 21 (item)


State 26

   26 cmd: echo .

    $default  reduce using rule 26 (cmd)


State 27

    3 start: item_list end_file .

    $default  reduce using rule 3 (start)


State 28

   24 item: view .

    $default  reduce using rule 24 (item)


State 29

   22 item: trace .
   23     | trace . INTEGER

    INTEGER  shift, and go to state 48

    $default  reduce using rule 22 (item)


State 30

   17 item: residue .
   18     | residue . INTEGER

    INTEGER  shift, and go to state 49

    $default  reduce using rule 17 (item)


State 31

   19 item: molecule .
   20     | molecule . INTEGER

    INTEGER  shift, and go to state 50

    $default  reduce using rule 19 (item)


State 32

    8 fatal_error: item_list junk .
   57 junk: junk . JUNK

    JUNK  shift, and go to state 33

    $default  reduce using rule 8 (fatal_error)


State 33

   57 junk: junk JUNK .

    $default  reduce using rule 57 (junk)


State 34

   13 item_list: pdbfile nl .
   14          | pdbfile nl . item nl
   15          | pdbfile nl . item ','
   16          | pdbfile nl . item COMMENT nl
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    RESIDUE   shift, and go to state 17
    MOLECULE  shift, and go to state 18
    ECHO_CMD  shift, and go to state 19
    COMMENT   shift, and go to state 35
    INTEGER   shift, and go to state 20
    VIEW      shift, and go to state 21
    NEWLINE   shift, and go to state 36
    CLEAR     shift, and go to state 23

    RESIDUE   [reduce using rule 13 (item_list)]
    MOLECULE  [reduce using rule 13 (item_list)]
    ECHO_CMD  [reduce using rule 13 (item_list)]
    INTEGER   [reduce using rule 13 (item_list)]
    VIEW      [reduce using rule 13 (item_list)]
    CLEAR     [reduce using rule 13 (item_list)]
    $default  reduce using rule 13 (item_list)

    item      go to state 51
    cmd       go to state 25
    echo      go to state 26
    view      go to state 28
    trace     go to state 29
    residue   go to state 30
    molecule  go to state 31


State 35

   61 nl: nl COMMENT . NEWLINE

    NEWLINE  shift, and go to state 52


State 36

   62 nl: nl NEWLINE .

    $default  reduce using rule 62 (nl)


State 37

    5 start: nl fatal_error . nl

    NEWLINE  shift, and go to state 5

    nl  go to state 53


State 38

    1 start: nl item_list . end_file
    8 fatal_error: item_list . junk
   10 item_list: item_list . item nl
   11          | item_list . item ','
   12          | item_list . item COMMENT nl

    RESIDUE      shift, and go to state 17
    MOLECULE     shift, and go to state 18
    ECHO_CMD     shift, and go to state 19
    INTEGER      shift, and go to state 20
    VIEW         shift, and go to state 21
    JUNK         shift, and go to state 4
    END_OF_FILE  shift, and go to state 22
    CLEAR        shift, and go to state 23

    item      go to state 24
    cmd       go to state 25
    echo      go to state 26
    end_file  go to state 54
    view      go to state 28
    trace     go to state 29
    residue   go to state 30
    molecule  go to state 31
    junk      go to state 32


State 39

    7 start: error nl end_file .

    $default  reduce using rule 7 (start)


State 40

    4 start: COMMENT nl fatal_error . nl

    NEWLINE  shift, and go to state 5

    nl  go to state 55


State 41

    2 start: COMMENT nl item_list . end_file
    8 fatal_error: item_list . junk
   10 item_list: item_list . item nl
   11          | item_list . item ','
   12          | item_list . item COMMENT nl

    RESIDUE      shift, and go to state 17
    MOLECULE     shift, and go to state 18
    ECHO_CMD     shift, and go to state 19
    INTEGER      shift, and go to state 20
    VIEW         shift, and go to state 21
    JUNK         shift, and go to state 4
    END_OF_FILE  shift, and go to state 22
    CLEAR        shift, and go to state 23

    item      go to state 24
    cmd       go to state 25
    echo      go to state 26
    end_file  go to state 56
    view      go to state 28
    trace     go to state 29
    residue   go to state 30
    molecule  go to state 31
    junk      go to state 32


State 42

   38 residue: RESIDUE INTEGER . '.' color
   39        | RESIDUE INTEGER . CHAIN '.' color
   40        | RESIDUE INTEGER . '_' atom '.' color
   41        | RESIDUE INTEGER . CHAIN '_' atom '.' color
   42        | RESIDUE INTEGER . '_' CARBONYL '.' color
   43        | RESIDUE INTEGER . CHAIN '_' CARBONYL '.' color
   44        | RESIDUE INTEGER . '_' atom '-' hydrogen '.' color
   45        | RESIDUE INTEGER . CHAIN '_' atom '-' hydrogen '.' color

    CHAIN  shift, and go to state 57
    '.'    shift, and go to state 58
    '_'    shift, and go to state 59


State 43

   46 molecule: MOLECULE INTEGER . '.' color
   47         | MOLECULE INTEGER . CHAIN '.' color
   48         | MOLECULE INTEGER . '_' atom '.' color
   49         | MOLECULE INTEGER . CHAIN '_' atom '.' color
   50         | MOLECULE INTEGER . '_' atom '-' hydrogen '.' color
   51         | MOLECULE INTEGER . CHAIN '_' atom '-' hydrogen '.' color

    CHAIN  shift, and go to state 60
    '.'    shift, and go to state 61
    '_'    shift, and go to state 62


State 44

   30 trace: INTEGER '-' . INTEGER backbone COLOR
   31      | INTEGER '-' . INTEGER CHAIN backbone COLOR

    INTEGER  shift, and go to state 63


State 45

   12 item_list: item_list item COMMENT . nl

    NEWLINE  shift, and go to state 5

    nl  go to state 64


State 46

   11 item_list: item_list item ',' .

    $default  reduce using rule 11 (item_list)


State 47

   10 item_list: item_list item nl .
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    COMMENT  shift, and go to state 35
    NEWLINE  shift, and go to state 36

    $default  reduce using rule 10 (item_list)


State 48

   23 item: trace INTEGER .

    $default  reduce using rule 23 (item)


State 49

   18 item: residue INTEGER .

    $default  reduce using rule 18 (item)


State 50

   20 item: molecule INTEGER .

    $default  reduce using rule 20 (item)


State 51

   14 item_list: pdbfile nl item . nl
   15          | pdbfile nl item . ','
   16          | pdbfile nl item . COMMENT nl

    COMMENT  shift, and go to state 65
    NEWLINE  shift, and go to state 5
    ','      shift, and go to state 66

    nl  go to state 67


State 52

   61 nl: nl COMMENT NEWLINE .

    $default  reduce using rule 61 (nl)


State 53

    5 start: nl fatal_error nl .
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    COMMENT  shift, and go to state 35
    NEWLINE  shift, and go to state 36

    $default  reduce using rule 5 (start)


State 54

    1 start: nl item_list end_file .

    $default  reduce using rule 1 (start)


State 55

    4 start: COMMENT nl fatal_error nl .
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    COMMENT  shift, and go to state 35
    NEWLINE  shift, and go to state 36

    $default  reduce using rule 4 (start)


State 56

    2 start: COMMENT nl item_list end_file .

    $default  reduce using rule 2 (start)


State 57

   39 residue: RESIDUE INTEGER CHAIN . '.' color
   41        | RESIDUE INTEGER CHAIN . '_' atom '.' color
   43        | RESIDUE INTEGER CHAIN . '_' CARBONYL '.' color
   45        | RESIDUE INTEGER CHAIN . '_' atom '-' hydrogen '.' color

    '.'  shift, and go to state 68
    '_'  shift, and go to state 69


State 58

   38 residue: RESIDUE INTEGER '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 73


State 59

   40 residue: RESIDUE INTEGER '_' . atom '.' color
   42        | RESIDUE INTEGER '_' . CARBONYL '.' color
   44        | RESIDUE INTEGER '_' . atom '-' hydrogen '.' color

    AN_ATOM   shift, and go to state 74
    CARBONYL  shift, and go to state 75

    atom  go to state 76


State 60

   47 molecule: MOLECULE INTEGER CHAIN . '.' color
   49         | MOLECULE INTEGER CHAIN . '_' atom '.' color
   51         | MOLECULE INTEGER CHAIN . '_' atom '-' hydrogen '.' color

    '.'  shift, and go to state 77
    '_'  shift, and go to state 78


State 61

   46 molecule: MOLECULE INTEGER '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 79


State 62

   48 molecule: MOLECULE INTEGER '_' . atom '.' color
   50         | MOLECULE INTEGER '_' . atom '-' hydrogen '.' color

    AN_ATOM  shift, and go to state 74

    atom  go to state 80


State 63

   30 trace: INTEGER '-' INTEGER . backbone COLOR
   31      | INTEGER '-' INTEGER . CHAIN backbone COLOR

    CHAIN  shift, and go to state 81
    '^'    shift, and go to state 82
    '.'    shift, and go to state 83
    '+'    shift, and go to state 84
    '~'    shift, and go to state 85
    ':'    shift, and go to state 86
    '@'    shift, and go to state 87

    backbone  go to state 88


State 64

   12 item_list: item_list item COMMENT nl .
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    COMMENT  shift, and go to state 35
    NEWLINE  shift, and go to state 36

    $default  reduce using rule 12 (item_list)


State 65

   16 item_list: pdbfile nl item COMMENT . nl

    NEWLINE  shift, and go to state 5

    nl  go to state 89


State 66

   15 item_list: pdbfile nl item ',' .

    $default  reduce using rule 15 (item_list)


State 67

   14 item_list: pdbfile nl item nl .
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    COMMENT  shift, and go to state 35
    NEWLINE  shift, and go to state 36

    $default  reduce using rule 14 (item_list)


State 68

   39 residue: RESIDUE INTEGER CHAIN '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 90


State 69

   41 residue: RESIDUE INTEGER CHAIN '_' . atom '.' color
   43        | RESIDUE INTEGER CHAIN '_' . CARBONYL '.' color
   45        | RESIDUE INTEGER CHAIN '_' . atom '-' hydrogen '.' color

    AN_ATOM   shift, and go to state 74
    CARBONYL  shift, and go to state 91

    atom  go to state 92


State 70

   56 color: COLOR .

    $default  reduce using rule 56 (color)


State 71

   54 color: '{' . COLOR '}'

    COLOR  shift, and go to state 93


State 72

   55 color: '(' . COLOR ')'

    COLOR  shift, and go to state 94


State 73

   38 residue: RESIDUE INTEGER '.' color .

    $default  reduce using rule 38 (residue)


State 74

   52 atom: AN_ATOM .

    $default  reduce using rule 52 (atom)


State 75

   42 residue: RESIDUE INTEGER '_' CARBONYL . '.' color

    '.'  shift, and go to state 95


State 76

   40 residue: RESIDUE INTEGER '_' atom . '.' color
   44        | RESIDUE INTEGER '_' atom . '-' hydrogen '.' color

    '-'  shift, and go to state 96
    '.'  shift, and go to state 97


State 77

   47 molecule: MOLECULE INTEGER CHAIN '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 98


State 78

   49 molecule: MOLECULE INTEGER CHAIN '_' . atom '.' color
   51         | MOLECULE INTEGER CHAIN '_' . atom '-' hydrogen '.' color

    AN_ATOM  shift, and go to state 74

    atom  go to state 99


State 79

   46 molecule: MOLECULE INTEGER '.' color .

    $default  reduce using rule 46 (molecule)


State 80

   48 molecule: MOLECULE INTEGER '_' atom . '.' color
   50         | MOLECULE INTEGER '_' atom . '-' hydrogen '.' color

    '-'  shift, and go to state 100
    '.'  shift, and go to state 101


State 81

   31 trace: INTEGER '-' INTEGER CHAIN . backbone COLOR

    '^'  shift, and go to state 82
    '.'  shift, and go to state 83
    '+'  shift, and go to state 84
    '~'  shift, and go to state 85
    ':'  shift, and go to state 86
    '@'  shift, and go to state 87

    backbone  go to state 102


State 82

   32 backbone: '^' .

    $default  reduce using rule 32 (backbone)


State 83

   33 backbone: '.' .

    $default  reduce using rule 33 (backbone)


State 84

   34 backbone: '+' .

    $default  reduce using rule 34 (backbone)


State 85

   35 backbone: '~' .

    $default  reduce using rule 35 (backbone)


State 86

   36 backbone: ':' .

    $default  reduce using rule 36 (backbone)


State 87

   37 backbone: '@' .

    $default  reduce using rule 37 (backbone)


State 88

   30 trace: INTEGER '-' INTEGER backbone . COLOR

    COLOR  shift, and go to state 103


State 89

   16 item_list: pdbfile nl item COMMENT nl .
   61 nl: nl . COMMENT NEWLINE
   62   | nl . NEWLINE

    COMMENT  shift, and go to state 35
    NEWLINE  shift, and go to state 36

    $default  reduce using rule 16 (item_list)


State 90

   39 residue: RESIDUE INTEGER CHAIN '.' color .

    $default  reduce using rule 39 (residue)


State 91

   43 residue: RESIDUE INTEGER CHAIN '_' CARBONYL . '.' color

    '.'  shift, and go to state 104


State 92

   41 residue: RESIDUE INTEGER CHAIN '_' atom . '.' color
   45        | RESIDUE INTEGER CHAIN '_' atom . '-' hydrogen '.' color

    '-'  shift, and go to state 105
    '.'  shift, and go to state 106


State 93

   54 color: '{' COLOR . '}'

    '}'  shift, and go to state 107


State 94

   55 color: '(' COLOR . ')'

    ')'  shift, and go to state 108


State 95

   42 residue: RESIDUE INTEGER '_' CARBONYL '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 109


State 96

   44 residue: RESIDUE INTEGER '_' atom '-' . hydrogen '.' color

    HYDROGEN  shift, and go to state 110

    hydrogen  go to state 111


State 97

   40 residue: RESIDUE INTEGER '_' atom '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 112


State 98

   47 molecule: MOLECULE INTEGER CHAIN '.' color .

    $default  reduce using rule 47 (molecule)


State 99

   49 molecule: MOLECULE INTEGER CHAIN '_' atom . '.' color
   51         | MOLECULE INTEGER CHAIN '_' atom . '-' hydrogen '.' color

    '-'  shift, and go to state 113
    '.'  shift, and go to state 114


State 100

   50 molecule: MOLECULE INTEGER '_' atom '-' . hydrogen '.' color

    HYDROGEN  shift, and go to state 110

    hydrogen  go to state 115


State 101

   48 molecule: MOLECULE INTEGER '_' atom '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 116


State 102

   31 trace: INTEGER '-' INTEGER CHAIN backbone . COLOR

    COLOR  shift, and go to state 117


State 103

   30 trace: INTEGER '-' INTEGER backbone COLOR .

    $default  reduce using rule 30 (trace)


State 104

   43 residue: RESIDUE INTEGER CHAIN '_' CARBONYL '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 118


State 105

   45 residue: RESIDUE INTEGER CHAIN '_' atom '-' . hydrogen '.' color

    HYDROGEN  shift, and go to state 110

    hydrogen  go to state 119


State 106

   41 residue: RESIDUE INTEGER CHAIN '_' atom '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 120


State 107

   54 color: '{' COLOR '}' .

    $default  reduce using rule 54 (color)


State 108

   55 color: '(' COLOR ')' .

    $default  reduce using rule 55 (color)


State 109

   42 residue: RESIDUE INTEGER '_' CARBONYL '.' color .

    $default  reduce using rule 42 (residue)


State 110

   53 hydrogen: HYDROGEN .

    $default  reduce using rule 53 (hydrogen)


State 111

   44 residue: RESIDUE INTEGER '_' atom '-' hydrogen . '.' color

    '.'  shift, and go to state 121


State 112

   40 residue: RESIDUE INTEGER '_' atom '.' color .

    $default  reduce using rule 40 (residue)


State 113

   51 molecule: MOLECULE INTEGER CHAIN '_' atom '-' . hydrogen '.' color

    HYDROGEN  shift, and go to state 110

    hydrogen  go to state 122


State 114

   49 molecule: MOLECULE INTEGER CHAIN '_' atom '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 123


State 115

   50 molecule: MOLECULE INTEGER '_' atom '-' hydrogen . '.' color

    '.'  shift, and go to state 124


State 116

   48 molecule: MOLECULE INTEGER '_' atom '.' color .

    $default  reduce using rule 48 (molecule)


State 117

   31 trace: INTEGER '-' INTEGER CHAIN backbone COLOR .

    $default  reduce using rule 31 (trace)


State 118

   43 residue: RESIDUE INTEGER CHAIN '_' CARBONYL '.' color .

    $default  reduce using rule 43 (residue)


State 119

   45 residue: RESIDUE INTEGER CHAIN '_' atom '-' hydrogen . '.' color

    '.'  shift, and go to state 125


State 120

   41 residue: RESIDUE INTEGER CHAIN '_' atom '.' color .

    $default  reduce using rule 41 (residue)


State 121

   44 residue: RESIDUE INTEGER '_' atom '-' hydrogen '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 126


State 122

   51 molecule: MOLECULE INTEGER CHAIN '_' atom '-' hydrogen . '.' color

    '.'  shift, and go to state 127


State 123

   49 molecule: MOLECULE INTEGER CHAIN '_' atom '.' color .

    $default  reduce using rule 49 (molecule)


State 124

   50 molecule: MOLECULE INTEGER '_' atom '-' hydrogen '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 128


State 125

   45 residue: RESIDUE INTEGER CHAIN '_' atom '-' hydrogen '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 129


State 126

   44 residue: RESIDUE INTEGER '_' atom '-' hydrogen '.' color .

    $default  reduce using rule 44 (residue)


State 127

   51 molecule: MOLECULE INTEGER CHAIN '_' atom '-' hydrogen '.' . color

    COLOR  shift, and go to state 70
    '{'    shift, and go to state 71
    '('    shift, and go to state 72

    color  go to state 130


State 128

   50 molecule: MOLECULE INTEGER '_' atom '-' hydrogen '.' color .

    $default  reduce using rule 50 (molecule)


State 129

   45 residue: RESIDUE INTEGER CHAIN '_' atom '-' hydrogen '.' color .

    $default  reduce using rule 45 (residue)


State 130

   51 molecule: MOLECULE INTEGER CHAIN '_' atom '-' hydrogen '.' color .

    $default  reduce using rule 51 (molecule)
